# lerobot-gui

./: .gitignore  README.md  index.html  package.json  pyproject.toml  setup.py  tailwind.config.js  tsconfig.json
backend/: calibration_service.py  dataset_recording_service.py  dataset_replay_service.py  dataset_visualization_service.py  env_manager.py  main.py  model_training_service.py  motor_setup_service.py  teleoperation_service.py
backend/tests/: test_calibration_service.py  test_dataset_recording_service.py  test_dataset_replay_service.py  test_dataset_visualization_service.py  test_main.py  test_model_training_service.py  test_motor_setup_service.py  test_teleoperation_service.py
openbot/comm/proto/: comm_pb2_grpc.py  image_stream_pb2_grpc.py
openbot/dashboard/: README.md  arm_config.json  index.html  package-lock.json  package.json  pyproject.toml
openbot/dashboard/backend/: README.md  arm_configuration_service.py  calibration_service.py  main.py  motor_setup_service.py  requirements.txt  teleoperation_service.py  test_calib.py
openbot/dashboard/src/: App.tsx  index.css  vite-env.d.ts
openbot/devices/actuators/: servo.py
openbot/interfaces/: actuator_interface.py
src/: App.tsx  index.css  main.tsx  test-setup.ts
src/components/: Sidebar.test.tsx  Sidebar.tsx
src/pages/: ArmConfiguration.test.tsx  ArmConfiguration.tsx  Calibration.test.tsx  Calibration.tsx  Configuration.test.tsx  Configuration.tsx  DatasetRecording.tsx  DatasetReplay.tsx  DatasetVisualization.tsx  ModelTraining.tsx  Teleoperation.tsx
src/store/: lerobotStore.tsx
(+20 files in other folders)
